# personal-ai-job-hunter

./: .debug_call_learning.py  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  tmp_debug_import.py  tmp_import_check.py  wsgi.py
.github/workflows/: ci.yml  deploy.yml
.pytest_basetemp/test_resume_parser_returns_str0/: prompt.txt
.pytest_tmp/test_resume_ingestion_persists0/: resume.txt
app/agents/: discovery_agent.py  discovery_service.py  learning_agent.py  linkedin_agent.py  matching_agent.py  outreach_agent.py  research_agent.py  scoring_engine.py  skill_gap_agent.py  tracker_agent.py
app/ai/: __init__.py  gemini_provider.py  provider.py
app/applications/: routes.py
app/companies/: routes.py
app/core/: exceptions.py  logging.py  rate_limiter.py  retry.py  types.py
app/dashboard/: broadcaster.py  routes.py
config/: job_sources.yaml  location_preferences.yaml  role_preferences.yaml  scoring_weights.yaml  settings.py
deploy/: nginx.conf  personal-ai-job-hunter.service
docs/: DEPLOYMENT.md  GITHUB_SECRETS.md
files/: API_DESIGN.md  ARCHITECTURE_SUMMARY.md  CURRENT_STATUS.txt  DATABASE_SUMMARY.md  FOLDER_STRUCTURE.md  NEXT_AGENT_PROMPT.md  PHASES_STATUS.txt  PRD.md  PROJECT_MEMORY.md  PR_BODY.md  README_PUSH.md  ROADMAP.md
scripts/: backup_db.ps1  backup_db.sh  import_companies.py  push_and_pr.ps1  setup_github_secrets.ps1  setup_github_secrets.sh
tests/: conftest.py
(+66 files in other folders)
