[project]
name = "personal-ai-job-hunter"
version = "0.1.0"
description = "Single-user AI job discovery, research, scoring, and application assistant."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Arjun" }]
dependencies = [
    "aiosqlite==0.20.0",
    "alembic==1.13.2",
    "APScheduler==3.10.4",
    "Flask==3.1.2",
    "flask-restx==1.3.0",
    "google-generativeai==0.7.2",
    "httpx==0.28.1",
    "Jinja2==3.1.6",
    "openpyxl==3.1.5",
    "pydantic==2.13.4",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
    "PyYAML==6.0.3",
    "SQLAlchemy==2.0.32",
    "structlog==24.4.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false
